source/stylesheets/_global.css.scss
header {
  @include grid-row;

  background-color: $primary-color;
  
  /* On large screens, put some margin above the top of the main menu */
  @media only screen and (min-width: 768px) {
    margin-top: 2em;
  }
    
  h1 {
    font-weight: normal;
    font-size: emCalc(34px);
    text-transform: uppercase;
    
    line-height: 1;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-left: 18px;
    padding-right: 18px;

    &, & a, & a:link, & a:hover, & a:visited, & a:active {
      font-weight: normal;
      color: white;
    }
    & a:hover { text-decoration: none; }

    @media only screen and (max-width: 899px) {
      text-align: center;
    }
    @media only screen and (min-width: 900px) {
      @include grid-column(7);
      
      padding-left: 18px;
      padding-right: 0;
    }
    @media only screen and (max-width: 768px) {
      font-size: emCalc(28px);
      
      padding-left: 9px;
      padding-right: 9px;
    }
    @media only screen and (max-width: 450px) {
      font-size: emCalc(20px);
    }

    em {
      color: #f7f7f7;
      text-shadow: -0.1em 0.1em #808080;
      font-size: 75%;
      text-transform: none;
      
      display: inline-block;
      position: relative;
      top: -0.13em;
      
      margin-left: 0.2em;
      margin-right: 0.2em;
    }
  }
  
  h2 {
    color: #e6e6e6;
    font-weight: normal;
    font-style: italic;
    font-size: emCalc(14px);
    text-align: right;
    
    line-height: 1;
    margin-top: 13px;
    margin-bottom: 13px;

    display: none;
    @media only screen and (min-width: 900px) {
      display: block;
      @include grid-column(5);

      padding-right: 18px;
      padding-left: 18px;
    }
  }
}

nav {
  @include grid-row;
  
  margin-top: 0.8em;
  margin-bottom: 4em;
  
  ul {
    list-style-type: none;
    
    li a {
      @include grid-column(2);
      text-align: center;
      font-weight: normal;
      
      @media only screen and (max-width: 450px) {
        @include grid-column(4);
        padding-top: 0.2em;
        padding-bottom: 0.2em;
      }
      
      &:hover, &.active {
        font-weight: bold;
        text-decoration: none;
        background-color: #e6e6e6;
      }
    }

    li.active a {
      font-weight: bold;
      background-color: #e6e6e6;
    }
  }
}

footer {
  @include grid-row;
  
  margin-top: 3em;
}

a { font-weight: bold; }
a:hover { text-decoration: underline; }

/* Don't shrink these by 10px (why have the variables, then?) */
h1 { font-size: $h1-font-size; }
h2 { font-size: $h2-font-size; }
h3 { font-size: $h3-font-size; }
h4 { font-size: $h4-font-size; }
h5 { font-size: $h5-font-size; }
h6 { font-size: $h6-font-size; }

h1 {
  margin-top: 2em;
}

